<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="@string/welcome_messag"
            android:textSize="14sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textMultiLine"/>

        <TextView
            style="@style/QuestionStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/question_1" />

        <RadioGroup
            android:id="@+id/radio_group1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_group1-1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="2dp"
            android:paddingStart="10dp"
            android:text="@string/android_studio" />

        <RadioButton
            android:id="@+id/radio_group1-2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingEnd="2dp"
            android:paddingStart="10dp"
            android:text="@string/java_netbeans" />

        </RadioGroup>

        <TextView
            style="@style/QuestionStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/what_is_4_4" />
        <RadioGroup
            android:id="@+id/radio_group2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_group2-1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="2dp"
            android:paddingStart="10dp"
            android:text="6" />

        <RadioButton
            android:id="@+id/radio_group2-2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingEnd="2dp"
            android:paddingStart="10dp"
            android:text="16" />

        </RadioGroup>

        <TextView
            style="@style/QuestionStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/anime_question" />

        <RadioGroup
            android:id="@+id/radio_group3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_group3-1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="2dp"
            android:paddingStart="10dp"
            android:text="@string/naruto" />

        <RadioButton
            android:id="@+id/radio_group3-2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingEnd="2dp"
            android:paddingStart="10dp"
            android:text="@string/one_piece" />

        </RadioGroup>

        <TextView
            style="@style/QuestionStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/football_question" />
        <RadioGroup
            android:id="@+id/radio_group4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_group4-1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="2dp"
            android:paddingStart="10dp"
            android:text="@string/barca" />

        <RadioButton
            android:id="@+id/radio_group4-2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingEnd="2dp"
            android:paddingStart="10dp"
            android:text="@string/real_madrid" />

        </RadioGroup>

        <TextView
            style="@style/QuestionStyle"
            android:layout_marginBottom="16dp"
            android:text="@string/device_question" />

        <RadioGroup
            android:id="@+id/radio_group5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_group5-1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="2dp"
            android:paddingStart="10dp"
            android:text="@string/apple" />

        <RadioButton
            android:id="@+id/radio_group5-2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:paddingEnd="2dp"
            android:paddingStart="10dp"
            android:text="@string/samsung" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_answer"
            android:layout_gravity="center_horizontal"
            android:onClick="submit_score"/>


    </LinearLayout>

</ScrollView>